--- a/BP Project/index.html
+++ b/BP Project/index.html
@@ -2,40 +2,41 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Numbers</title>
+    <title>Numbers</title>
 
-  <script src="libraries/p5.js"></script>
-  <script src="libraries/p5.dom.js"></script>
-  <script src="libraries/p5.sound.js"></script>
-  <script src="sketch.js"></script>
-  <script src="box.js"></script>
+    <script src="libraries/p5.js"></script>
+    <script src="libraries/p5.dom.js"></script>
+    <script src="libraries/p5.sound.js"></script>
+    <script src="sketch.js"></script>
+    <script src="box.js"></script>
 
-  <style>
-    body {
-      margin: auto;
-      padding: 0;
-      overflow: hidden;
-      background: rgb(0, 102, 153);
-    }
+    <style>
+        body {
+            margin: auto;
+            padding: 0;
+            overflow: hidden;
+            background: rgb(0, 102, 153);
+        }
 
-    ul li {
-      display: inline-block;
-    }
+        ul li {
+            display: inline-block;
+        }
 
-    canvas {
-      margin: auto;
-    }
-  </style>
+        canvas {
+            margin: auto;
+        }
+
+    </style>
 </head>
 
 <body>
-  <ul style="display:inline">
+    <ul style="display:inline">
 
-    <li> <input id="Base" type="text" placeholder="Base" style="
+        <li> <input id="Base" type="text" placeholder="Base" style="
         display: inline-block;
         -webkit-box-sizing: content-box;
         -moz-box-sizing: content-box;
@@ -46,22 +47,21 @@
         border: 1px solid #b7b7b7;
         -webkit-border-radius: 3px;
         border-radius: 3px;
-        font: normal 23px/normal " Times New Roman ", Times, serif;
+        font: normal 23px/normal 'Times New Roman', Times, serif;
         color: rgba(0,142,198,1);
         -o-text-overflow: clip;
         text-overflow: clip;
         background: rgba(252,252,252,1);
         -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
         box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
-        text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
         -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
         -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
         -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
         transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
         ">
-    </li>
-    <li>
-      <button type="button" id="SetBase" style="
+        </li>
+        <li>
+            <button type="button" id="SetBase" style="
       background-color: rgb(0,0,0);
 	    border: none;
       margin:20px;
@@ -73,9 +73,9 @@
       align-items: center;
       justify-content: center;
 	    font-size: 50px;">Set Base</button>
-    </li>
-    <li>
-      <button type="button" id="Check" style="
+        </li>
+        <li>
+            <button type="button" id="Check" style="
       background-color: rgb(0,0,0);
       border: none;
       color: white;F
@@ -87,9 +87,9 @@
       align-items: center;
       justify-content: center;
       font-size: 50px;">Check</button>
-    </li>
-    <li>
-      <button type="button" id="Reset" style="
+        </li>
+        <li>
+            <button type="button" id="Reset" style="
       background-color: rgb(0,0,0);
       border: none;
       color: white;F
@@ -101,9 +101,9 @@
       align-items: center;
       justify-content: center;
       font-size: 50px;">Reset</button>
-    </li>
-    <li>
-      <button type="button" id="nrn" style="
+        </li>
+        <li>
+            <button type="button" id="nrn" style="
         background-color: rgb(0,0,0);
         border: none;
         margin-top:20px;
@@ -117,7 +117,7 @@
         align-items: center;
         justify-content: center;
         font-size: 50px;">Next</button>
-    </li>
+        </li>
 
 </body>
 
